<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
		<LinearLayout 
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
		    >
			<TableLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    >
			    <TableRow>	<!-- fw_module_id -->
			        <Button
			            android:id="@+id/fw_module_id_button"
			            android:layout_width="40dp"
			            android:layout_height="32dp"
			            android:textSize="14sp"	
			            android:onClick="onClick"
			            android:text="@string/read" 
			            />		        
			        <TextView 
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:text="@string/fw_module_id"
			         	android:background="#ff0000"
			         	android:gravity="center_horizontal"
			            />
			        <TextView
			            android:id="@+id/fw_module_id_textview"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            
			            android:text="@string/click_to_read"
			            android:gravity="center_horizontal"			
			            />
			    </TableRow>
			    <TableRow>	<!-- fw_version -->
			        <Button
			            android:id="@+id/fw_version_button"
			            android:layout_width="40dp"
			            android:layout_height="32dp"
			            android:textSize="14sp"	
			            android:onClick="onClick"
			            android:text="@string/read" 
			            />		        
			        <TextView 
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:text="@string/fw_version"
			            android:background="#ff0000"
			            android:gravity="center_horizontal"
			            />
			        <TextView
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:id="@+id/fw_version_textview"
			          
			            android:text="@string/click_to_read"
			            android:gravity="center_horizontal"
			            />
			    </TableRow>
			    <TableRow>	<!-- log_switch -->
			        <Button 
			            android:layout_width="40dp"
			            android:layout_height="32dp"
			            android:textSize="14sp"	
			            android:text="@string/on"
			            android:onClick="onClick"
			            android:id="@+id/log_switch_on_button"		            
			            />
			        <TextView 
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:text="@string/log_switch"
			            android:background="#ff0000"
			            android:gravity="center_horizontal"
			            />
			        <Button 
			            android:layout_width="40dp"
			            android:layout_height="32dp"
			            android:textSize="14sp"	
			            android:text="@string/off"
			            android:onClick="onClick"
			            android:id="@+id/log_switch_off_button"		            
			            />		        
			    </TableRow>	
			    <TableRow>	<!-- sensor_rx_tx -->
			        <Button 
			            android:layout_width="40dp"
			            android:layout_height="32dp"
			            android:textSize="14sp"	
			            android:text="@string/read"
			            android:onClick="onClick"
			            android:id="@+id/sensor_rx_tx_button"		            
			            />
			       	<TextView 
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:text="@string/sensor_rx_tx"
			            android:background="#ff0000"
			            android:gravity="center_horizontal"
			            />
			     	<TextView
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:id="@+id/sersor_rx_tx_textview"		          
			            android:text="@string/click_to_read"
			            android:gravity="center_horizontal"
			            />
			    </TableRow>	 
			    <TableRow>	<!-- gesture_switch -->
			        <Button 
			            android:layout_width="40dp"
			            android:layout_height="32dp"
			            android:textSize="14sp"	
			            android:text="@string/read"
			            android:onClick="onClick"
			            android:id="@+id/gesture_switch_button"		            
			            />
			       	<TextView 
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:text="@string/gesture_switch"
			            android:background="#ff0000"
			            android:gravity="center_horizontal"
			            />
			     	<TextView
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:id="@+id/gesture_switch_textview"		          
			            android:text="@string/click_to_read"
			            android:gravity="center_horizontal"
			            />
			    </TableRow>	 
			    <TableRow>	<!-- gesture_point -->
			        <Button 
			            android:layout_width="40dp"
			            android:layout_height="32dp"
			            android:textSize="14sp"	
			            android:text="@string/read"
			            android:onClick="onClick"
			            android:id="@+id/gesture_point_button"		            
			            />
			       	<TextView 
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:text="@string/gesture_point"
			            android:background="#ff0000"
			            android:gravity="center_horizontal"
			            />
			     	<TextView
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:id="@+id/gesture_point_textview"		          
			            android:text="@string/click_to_read"
			            android:gravity="center_horizontal"
			            />
			    </TableRow>			    		       
			</TableLayout>
			
			<TableLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    >
			    <TableRow>
			       	<TextView 
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:text="@string/gesture_switch"
			            android:background="#ff0000"
			            android:gravity="center_horizontal"
			            />
			       	<ToggleButton 
	        			android:layout_width="40dp"
					    android:layout_height="32dp"
		    			android:textSize="14sp"
		    			android:id="@+id/gesture_du"
		    			android:onClick="onClick"
		   				android:textOff="DU"
					    android:textOn="DU"
		    			android:checked="false"
	        			/>
			       	<ToggleButton 
	        			android:layout_width="40dp"
					    android:layout_height="32dp"
		    			android:textSize="14sp"
		    			android:id="@+id/gesture_ud"
		    			android:onClick="onClick"
		   				android:textOff="UD"
					    android:textOn="UD"
		    			android:checked="false"
	        			/>
			       	
			       	<ToggleButton 
	        			android:layout_width="40dp"
					    android:layout_height="32dp"
		    			android:textSize="14sp"
		    			android:id="@+id/gesture_lr"
		   				android:textOff="LR"
					    android:textOn="LR"
		    			android:checked="false"
		    			android:onClick="onClick"
	        			/>	
			       	<ToggleButton 
	        			android:layout_width="40dp"
					    android:layout_height="32dp"
		    			android:textSize="14sp"
		    			android:id="@+id/gesture_rl"
		   				android:textOff="RL"
					    android:textOn="RL"
		    			android:checked="false"
		    			android:onClick="onClick"
	        			/>
			       	<ToggleButton 
	        			android:layout_width="40dp"
					    android:layout_height="32dp"
		    			android:textSize="14sp"
		    			android:id="@+id/gesture_c"
		   				android:textOff="c"
					    android:textOn="c"
		    			android:checked="false"
		    			android:onClick="onClick"
	        			/>
			       	<ToggleButton 
	        			android:layout_width="40dp"
					    android:layout_height="32dp"
		    			android:textSize="14sp"
		    			android:id="@+id/gesture_m"
		   				android:textOff="m"
					    android:textOn="m"
		    			android:checked="false"
		    			android:onClick="onClick"
	        			/>	
			    </TableRow>
			    <TableRow>
			       	
			       	<ToggleButton 
	        			android:layout_width="40dp"
					    android:layout_height="32dp"
		    			android:textSize="14sp"
		    			android:id="@+id/gesture_e"
		   				android:textOff="e"
					    android:textOn="e"
		    			android:checked="false"
		    			android:onClick="onClick"
	        			/>
			       	<ToggleButton 
	        			android:layout_width="40dp"
					    android:layout_height="32dp"
		    			android:textSize="14sp"
		    			android:id="@+id/gesture_o"
		   				android:textOff="o"
					    android:textOn="o"
		    			android:checked="false"
		    			android:onClick="onClick"
	        			/>
			       	<ToggleButton 
	        			android:layout_width="40dp"
					    android:layout_height="32dp"
		    			android:textSize="14sp"
		    			android:id="@+id/gesture_w"
		   				android:textOff="w"
					    android:textOn="w"
		    			android:checked="false"
		    			android:onClick="onClick"
	        			/>		
	        		<ToggleButton 
	        			android:layout_width="40dp"
					    android:layout_height="32dp"
		    			android:textSize="14sp"
		    			android:id="@+id/gesture_dc"
		   				android:textOff="DC"
					    android:textOn="DC"
		    			android:checked="false"
		    			android:textColor="#0000ff"
		    			android:onClick="onClick"
	        			/>
			       	<ToggleButton 
	        			android:layout_width="40dp"
					    android:layout_height="32dp"
		    			android:textSize="14sp"
		    			android:id="@+id/gesture_a"
		   				android:textOff="A"
					    android:textOn="A"
		    			android:checked="false"
		    			android:textColor="#00ff00"
		    			android:onClick="onClick"
	        			/>
			       	<ToggleButton 
	        			android:layout_width="40dp"
					    android:layout_height="32dp"
		    			android:textSize="14sp"
		    			android:id="@+id/gesture_f"
		   				android:textOff="f"
					    android:textOn="f"
		    			android:checked="false"
		    			android:textColor="#00ff00"
		    			android:onClick="onClick"
	        			/>
			       	
			       			       				       			        				        					       				       				       	
				</TableRow>
				
			</TableLayout>
		</LinearLayout>	
	</ScrollView>


	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="32dp"
	    android:text="@string/return_to_main"	
	    android:onClick="closeActivity"    
	    />
</LinearLayout>
